--- a/about.html
+++ b/about.html
@@ -72,25 +72,26 @@
 		<div class="itemcontent" style="padding-left:120px;">
 			<li><h5>1. Adobe XD</h5></li>
 		<li>	<h6>Udemy <br>Issued Apr 2019 - No Expiration Date</h6>
-				<a href="">See Credential</a> <br></li><br><br>
+				<a href="https://www.udemy.com/certificate/UC-HXHTUI3J/"  target="_blank">See Credential</a> <br></li><br><br>
 			<li><h5>2. Adobe Photoshop CC Retouching and Effects Masterclass</h5></li>
 			<li>	<h6>Udemy <br>Issued Mar 2019 - No Expiration Date</h6>
-				<a href="">See Credential</a> <br></li><br><br>
+				<a href="https://www.udemy.com/certificate/UC-4H2PT3WH/" target="_blank">See Credential</a> <br></li><br><br>
 			<li><h5>3. Adobe After Effects</h5></li>
 		<li>	<h6>Udemy <br>Issued Apr 2019 - No Expiration Date</h6>
-				<a href="">See Credential</a> <br></li><br><br>
+				<a href="https://www.udemy.com/certificate/UC-3YPDZZMJ/" target="_blank">See Credential</a> <br></li><br><br>
 			<li><h5>4. Logo Designing</h5></li>
 		<li>	<h6>Udemy <br>Issued Mar 2019 - No Expiration Date</h6>
-				<a href="">See Credential</a> <br></li><br><br>
+				<a href="https://www.udemy.com/certificate/UC-Z9WXGFWL/" target="_blank">See Credential</a> <br></li><br><br>
 				<li><h5>5. HTML5 and CSS3</h5></li>
 		<li>	<h6>Udemy <br>Issued Mar 2019 - No Expiration Date</h6>
-				<a href="">See Credential</a> <br></li><br><br>
+				<a href="https://www.udemy.com/certificate/UC-S5MQHKX0/" target="_blank">See Credential</a> <br></li><br><br>
 				<li><h5>6. Web Development Bootcamp</h5></li>
 		<li>	<h6>Udemy <br>Issued Mar 2019 - No Expiration Date</h6>
-				<a href="">See Credential</a> <br></li><br><br>
+				<a href="https://www.udemy.com/certificate/UC-X5H5TUUK/" target="_blank">See Credential</a> <br></li><br><br>
 				<li><h5>7. Git : Become an Expert in Git & Github</h5></li>
 		<li>	<h6>Udemy <br>Issued May 2019 - No Expiration Date</h6>
-				<a href="">See Credential</a> <br></li><br><br>
+				<a href="https://www.udemy.com/certificate/UC-9CJ1VFNV/" target="_blank">See Credential</a> <br></li><br><br>
+
 		</div>
 </ul>
 </div>
